[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = "1.18.26"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = [
  "no-entrypoint",
] }
thiserror = "1.0.69"
ahash = "0.8.11"
